--- a/assets/templates/menu.c.j2
+++ b/assets/templates/menu.c.j2
@@ -12,6 +12,11 @@
 {{ code }}
 {% endfor %}
 
+static void button_press_down_cb(void *arg)
+{
+    // TODO: Implement button press down handling logic
+}
+
 static void event_handler(lv_event_t *e) {
     lv_obj_t *obj = lv_event_get_target(e);
     lv_event_code_t code = lv_event_get_code(e);
@@ -85,7 +90,7 @@ void menu_init(void) {
     };
     
     // Create button handle
-    button_handle_t {{ encoder.name }}_btn = iot_button_create(&btn_cfg);
+    button_handle_t {{ encoder.name }}_btn = iot_button_new_gpio_device(&btn_cfg, &gpio_btn_cfg);
     if ({{ encoder.name }}_btn) {
         iot_button_register_cb({{ encoder.name }}_btn, BUTTON_PRESS_DOWN, button_press_down_cb, NULL);
     }
