Commit and merge of branches prior to splitting off a dev branch

--- a/components/esp_menu/assets/templates/menu.c.j2
+++ b/components/esp_menu/assets/templates/menu.c.j2
@@ -62,6 +62,41 @@ void menu_init(void) {
     {% set screen_loop = loop %}
     {% set screen_name = "main" if screen.name == "main" else screen.name | replace(" ", "_") | replace("/", "_") | lower %}
     lv_obj_t *list_{{ screen_name }} = lv_list_create(scr_{{ screen_name }});
+    {% if screen_name == "main" %}
+    lv_obj_set_size(list_main, 128, 64);
+    lv_obj_align(list_main, LV_ALIGN_TOP_LEFT, 0, 0);
+    // Enable vertical scrolling for the list and set max height
+    lv_obj_set_scroll_dir(list_main, LV_DIR_VER);
+    lv_obj_set_scroll_snap_y(list_main, LV_SCROLL_SNAP_CENTER);
+    lv_obj_set_style_max_height(list_main, 64, 0);
+    set_main_menu_list(list_main);
+    // --- Encoder and group setup ---
+    // Create a group for the encoder and assign it
+    lv_group_t *group_encoder = lv_group_create();
+    // Add the menu list to the group
+    lv_group_add_obj(group_encoder, list_main);
+    // Set focus to the menu list
+    lv_group_focus_obj(list_main);
+    // Find the encoder input device (assumes only one encoder)
+    lv_indev_t *indev = lv_indev_get_next(NULL);
+    while (indev) {
+        if (lv_indev_get_type(indev) == LV_INDEV_TYPE_ENCODER) {
+            lv_indev_set_group(indev, group_encoder);
+            break;
+        }
+        indev = lv_indev_get_next(indev);
+    }
+
+    // --- Style for focused menu item (SSD1306 highlight) ---
+    static lv_style_t style_focus;
+    lv_style_init(&style_focus);
+    lv_style_set_bg_opa(&style_focus, LV_OPA_COVER);
+    lv_style_set_bg_color(&style_focus, lv_color_white());
+    lv_style_set_text_color(&style_focus, lv_color_black());
+    lv_style_set_border_width(&style_focus, 1);
+    lv_style_set_border_color(&style_focus, lv_color_black());
+    lv_obj_add_style(list_main, &style_focus, LV_PART_ITEMS | LV_STATE_FOCUSED);
+    {% endif %}
     {% for item in screen['items'] %}
     {% set item_index = screen_loop.index0 * 100 + loop.index %}
     {% if item.graphic_id %}
@@ -74,6 +109,10 @@ void menu_init(void) {
     {% else %}
     lv_obj_t *btn_{{ item_index }} = lv_list_add_btn(list_{{ screen_name }}, NULL, "{{ item.name }}");
     lv_obj_add_event_cb(btn_{{ item_index }}, event_handler, LV_EVENT_CLICKED, NULL);
+    {% endif %}
+    {% if loop.first and screen_name == "main" %}
+    // Do not force focus to first button; let group/encoder handle focus navigation
+    // lv_group_focus_obj(btn_{{ item_index }});
     {% endif %}
     {% endfor %}
     
@@ -98,6 +137,8 @@ void menu_init(void) {
     {% endfor %}
     {% endfor %}
 
+    // Update layout after populating the list
+    lv_obj_update_layout(list_main);
     // Load initial screen
     lv_scr_load(scr_main);
 }
