--- a/assets/templates/menu.c.j2
+++ b/assets/templates/menu.c.j2
@@ -1,152 +1,115 @@
-#include "menu_data.h"
+// Generated menu.c from template
+// Includes required LVGL and user graphics headers
 #include "lvgl.h"
-#include "esp_lvgl_port.h"
-#include "iot_knob.h"
-#include "iot_button.h"
-#include "button_types.h"
-#include "button_gpio.h"
-#include "string.h"
+#include "menu_data.h"
 #include "user_graphic.h"
+#include <string.h>
 
+// Helper macro to sanitize names into valid C identifiers
+// Jinja macro: replaces spaces, slashes, hyphens and '&' then lowers
+{% macro ident(name) -%}
+{{ name | replace(' ', '_') | replace('/', '_') | replace('-', '_') | replace('&', 'and') | lower }}
+{%- endmacro %}
+
+// Forward declarations for submenu screens so event handlers can switch screens
+{% for screen in config.menu.screens %}
+{% for item in screen["items"] %}
+{% if item.type == 'submenu' %}
+static lv_obj_t *scr_{{ ident(item.name) }};
+{% endif %}
+{% endfor %}
+{% endfor %}
+
+// Declarations for embedded images provided via graphics_code
 {% for code in graphics_code %}
 {{ code }}
 {% endfor %}
 
-static void button_press_down_cb(void *arg)
-{
-    // TODO: Implement button press down handling logic
-}
-
 static void event_handler(lv_event_t *e) {
     lv_obj_t *obj = lv_event_get_target(e);
-    lv_event_code_t code = lv_event_get_code(e);
-    if (code == LV_EVENT_CLICKED) {
-        const char *text = lv_list_get_btn_text(lv_obj_get_parent(obj), obj);
-        {% for screen in config.menu.screens %}
-        {% for item in screen.items %}
-        if (strcmp(text, "{{ item.name }}") == 0) {
-            {% if item.type == 'action' and item.callback %}
-            {{ item.callback }}();
-            {% elif item.type == 'submenu' %}
-            lv_scr_load(scr_{{ item.name | replace(" ", "_") | lower }});
-            {% endif %}
-        }
-        {% endfor %}
-        {% endfor %}
+    if (lv_event_get_code(e) != LV_EVENT_CLICKED) return;
+    const char *text = lv_list_get_btn_text(lv_obj_get_parent(obj), obj);
+    if (!text) return;
+    {% for screen in config.menu.screens %}
+    {% for item in screen["items"] %}
+    if (strcmp(text, "{{ item.name }}") == 0) {
+        {% if item.type == 'action' and item.callback %}
+        {{ item.callback }}();
+        {% elif item.type == 'submenu' %}
+        lv_scr_load(scr_{{ ident(item.name) }});
+        {% endif %}
+        return;
     }
+    {% endfor %}
+    {% endfor %}
 }
 
 void menu_init(void) {
-    // Initialize LVGL port with default configuration
-    const lvgl_port_cfg_t lvgl_cfg = ESP_LVGL_PORT_INIT_CONFIG();
-    lvgl_port_init(&lvgl_cfg);
-    
-    // Configure the display
-    const lvgl_port_display_cfg_t disp_cfg = {
-        .hres = {{ config.display.width }},
-        .vres = {{ config.display.height }},
-        .flags = {
-            .buff_dma = true,
-            .buff_spiram = false,
-            .sw_rotate = false,
-            .swap_bytes = false,
-        },
-    };
-    
-    // Add display
-    lv_disp_t *disp = lvgl_port_add_disp(&disp_cfg);
-    
-    // Create and register screens
+    // Create main screen and any submenu screens
     lv_obj_t *scr_main = lv_obj_create(NULL);
     user_graphic_init(scr_main);
     {% for screen in config.menu.screens %}
-    {% for item in screen.items %}
+    {% for item in screen["items"] %}
     {% if item.type == 'submenu' %}
-    lv_obj_t *scr_{{ item.name | replace(" ", "_") | lower }} = lv_obj_create(NULL);
-    user_graphic_init(scr_{{ item.name | replace(" ", "_") | lower }});
+    scr_{{ ident(item.name) }} = lv_obj_create(NULL);
+    user_graphic_init(scr_{{ ident(item.name) }});
     {% endif %}
     {% endfor %}
     {% endfor %}
-    
-    // Encoder setup
-    {% for encoder in config.encoders %}
-    knob_config_t knob_cfg = {
-        .default_direction = 0,
-        .gpio_encoder_a = {{ encoder.pins.A }},
-        .gpio_encoder_b = {{ encoder.pins.B }}
-    };
-    knob_handle_t {{ encoder.name }} = iot_knob_create(&knob_cfg);
-    
-    // Create button with updated API for button component v4.x
-    button_config_t btn_cfg = {
-        .long_press_time = CONFIG_BUTTON_LONG_PRESS_TIME_MS,
-        .short_press_time = CONFIG_BUTTON_SHORT_PRESS_TIME_MS,
-    };
-    
-    // Configure GPIO button
-    button_gpio_config_t gpio_btn_cfg = {
-        .gpio_num = {{ encoder.pins.switch }},
-        .active_level = 0,
-    };
-    
-    // Create button handle
-    button_handle_t {{ encoder.name }}_btn = iot_button_new_gpio_device(&btn_cfg, &gpio_btn_cfg);
-    if ({{ encoder.name }}_btn) {
-        iot_button_register_cb({{ encoder.name }}_btn, BUTTON_PRESS_DOWN, button_press_down_cb, NULL);
-    }
-    
-    lvgl_port_encoder_cfg_t encoder_cfg = {
-        .disp = disp,
-        .encoder_a_b = {{ encoder.name }},
-        .encoder_enter = {{ encoder.name }}_btn
-    };
-    lv_indev_t *indev_{{ encoder.name }} = lvgl_port_add_encoder(&encoder_cfg);
-    lv_group_t *group_{{ encoder.name }} = lv_group_create();
-    {% endfor %}
 
-    // Menu setup
+    // Styles for better focus visibility and spacing on monochrome OLED
+    static lv_style_t style_focus;
+    static lv_style_t style_normal;
+    lv_style_init(&style_focus);
+    lv_style_set_bg_opa(&style_focus, LV_OPA_COVER);
+    lv_style_set_bg_color(&style_focus, lv_color_white());
+    lv_style_set_text_color(&style_focus, lv_color_black());
+    lv_style_set_border_width(&style_focus, 2);
+    lv_style_set_border_color(&style_focus, lv_color_black());
+    lv_style_set_outline_width(&style_focus, 1);
+    lv_style_set_outline_color(&style_focus, lv_color_black());
+    lv_style_set_pad_all(&style_focus, 2);
+
+    lv_style_init(&style_normal);
+    lv_style_set_pad_all(&style_normal, 1);
+    lv_style_set_min_height(&style_normal, 14);
+
+    // Build main menu list
+    lv_obj_t *list_main = lv_list_create(scr_main);
+    lv_obj_center(list_main);
+    lv_obj_add_style(list_main, &style_focus, LV_PART_ITEMS | LV_STATE_FOCUSED);
+    lv_obj_add_style(list_main, &style_normal, LV_PART_ITEMS);
     {% for screen in config.menu.screens %}
-    lv_obj_t *list_{{ screen.name }} = lv_list_create(scr_{{ screen.name }});
-    {% for item in screen.items %}
+    {% for item in screen["items"] %}
     {% if item.graphic_id %}
-    lv_obj_t *img_{{ loop.index }} = lv_img_create(list_{{ screen.name }});
-    lv_img_set_src(img_{{ loop.index }}, &{{ item.graphic_id }}_dsc);
-    lv_obj_align(img_{{ loop.index }}, LV_ALIGN_LEFT_MID, 0, 0);
-    lv_obj_t *btn_{{ loop.index }} = lv_list_add_btn(list_{{ screen.name }}, NULL, "{{ item.name }}");
-    lv_obj_align_to(btn_{{ loop.index }}, img_{{ loop.index }}, LV_ALIGN_OUT_RIGHT_MID, 5, 0);
-    lv_obj_add_event_cb(btn_{{ loop.index }}, event_handler, LV_EVENT_CLICKED, NULL);
-    lv_group_add_obj(group_{{ config.encoders[0].name }}, btn_{{ loop.index }});
+    lv_obj_t *btn_main_{{ loop.index0 }} = lv_list_add_btn(list_main, &{{ item.graphic_id }}_dsc, "{{ item.name }}");
     {% else %}
-    lv_obj_t *btn_{{ loop.index }} = lv_list_add_btn(list_{{ screen.name }}, NULL, "{{ item.name }}");
-    lv_obj_add_event_cb(btn_{{ loop.index }}, event_handler, LV_EVENT_CLICKED, NULL);
-    lv_group_add_obj(group_{{ config.encoders[0].name }}, btn_{{ loop.index }});
+    lv_obj_t *btn_main_{{ loop.index0 }} = lv_list_add_btn(list_main, NULL, "{{ item.name }}");
     {% endif %}
+    lv_obj_add_event_cb(btn_main_{{ loop.index0 }}, event_handler, LV_EVENT_CLICKED, NULL);
     {% endfor %}
-    lv_indev_set_group(indev_{{ config.encoders[0].name }}, group_{{ config.encoders[0].name }});
-    
-    {% for item in screen.items %}
+    {% endfor %}
+
+    // Build submenu lists
+    {% for screen in config.menu.screens %}
+    {% for item in screen["items"] %}
     {% if item.type == 'submenu' %}
-    lv_obj_t *list_{{ item.name | replace(" ", "_") | lower }} = lv_list_create(scr_{{ item.name | replace(" ", "_") | lower }});
-    {% for subitem in item.items %}
-    {% if subitem.graphic_id %}
-    lv_obj_t *subimg_{{ loop.index }} = lv_img_create(list_{{ item.name | replace(" ", "_") | lower }});
-    lv_img_set_src(subimg_{{ loop.index }}, &{{ subitem.graphic_id }}_dsc);
-    lv_obj_align(subimg_{{ loop.index }}, LV_ALIGN_LEFT_MID, 0, 0);
-    lv_obj_t *subbtn_{{ loop.index }} = lv_list_add_btn(list_{{ item.name | replace(" ", "_") | lower }}, NULL, "{{ subitem.name }}");
-    lv_obj_align_to(subbtn_{{ loop.index }}, subimg_{{ loop.index }}, LV_ALIGN_OUT_RIGHT_MID, 5, 0);
-    lv_obj_add_event_cb(subbtn_{{ loop.index }}, event_handler, LV_EVENT_CLICKED, NULL);
-    lv_group_add_obj(group_{{ config.encoders[0].name }}, subbtn_{{ loop.index }});
-    {% else %}
-    lv_obj_t *subbtn_{{ loop.index }} = lv_list_add_btn(list_{{ item.name | replace(" ", "_") | lower }}, NULL, "{{ subitem.name }}");
-    lv_obj_add_event_cb(subbtn_{{ loop.index }}, event_handler, LV_EVENT_CLICKED, NULL);
-    lv_group_add_obj(group_{{ config.encoders[0].name }}, subbtn_{{ loop.index }});
-    {% endif %}
-    {% endfor %}
-    lv_indev_set_group(indev_{{ config.encoders[0].name }}, group_{{ config.encoders[0].name }});
+    lv_obj_t *list_{{ ident(item.name) }} = lv_list_create(scr_{{ ident(item.name) }});
+    lv_obj_center(list_{{ ident(item.name) }});
+    lv_obj_add_style(list_{{ ident(item.name) }}, &style_focus, LV_PART_ITEMS | LV_STATE_FOCUSED);
+    lv_obj_add_style(list_{{ ident(item.name) }}, &style_normal, LV_PART_ITEMS);
+        {% for subitem in item["items"] %}
+        {% if subitem.graphic_id %}
+        lv_obj_t *btn_{{ ident(item.name) }}_{{ loop.index0 }} = lv_list_add_btn(list_{{ ident(item.name) }}, &{{ subitem.graphic_id }}_dsc, "{{ subitem.name }}");
+        {% else %}
+        lv_obj_t *btn_{{ ident(item.name) }}_{{ loop.index0 }} = lv_list_add_btn(list_{{ ident(item.name) }}, NULL, "{{ subitem.name }}");
+        {% endif %}
+        lv_obj_add_event_cb(btn_{{ ident(item.name) }}_{{ loop.index0 }}, event_handler, LV_EVENT_CLICKED, NULL);
+        {% endfor %}
     {% endif %}
     {% endfor %}
     {% endfor %}
 
-    // Load initial screen
+    // Show the main screen
     lv_scr_load(scr_main);
 }
