--- a/assets/templates/menu.h.j2
+++ b/assets/templates/menu.h.j2
@@ -2,6 +2,8 @@
 #define MENU_DATA_H
 
 #include "lvgl.h"
+#include <stdint.h>
+#include <stddef.h>
 
 {% for prototype in action_prototypes %}
 {{ prototype }}
